Use of occupation map